PHP 4.0                                                                    NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, Version 4.2.0-dev
- Renamed key_exists tp array_key_exists. (Derick)
- Fix ImageColorsForIndex() and ImageColorAt() to work for TrueColor
  images. (Rasmus)
- Added support for bind_textdomain_codeset(). (rudib@email.si)
- Add generic Win 32 API extension. (jmoore)
- Fix Bug 9878 (patch by bfoddy@mediaone.net). (jmoore)
- Removed a warning message about a NONEXISTENT character set from
  mysql_connect(), when the server's default character set != latin1.
- Add Direct I/O extension for lowlevel access to the POSIX layer. (sterling)
- Added Udm_Check_Charset function. (gluke)
- New SAPI module for the WebJames server on RISC OS. (Alex Waugh)
- Made ldap_add (and modify) give warning with illegal value arrays.
  Previously seg faulted or added wrong value. (Stig Venaas)
- mnoGoSearch module example updates for 3.2.x compatibility
- Some mnogosearch-3.2.x compilation bugs fixes.
  Make crosswords and weight sections work with mnogosearch-3.2.x
  UDM_PARAM_HLBEG, UDM_PARAM_HLEND mnoGoSearch Agent parameters
  has been added. (gluke)
- Fix bug 13885 (gmdate timezone handling on windows). (jmoore)
- Fix behaviour of strtok. Bug 13866. (jmoore)
- Made fbsql_num_rows() return the correct value on all select statements.
  (Frank)
- Fixed HTTP file upload support to handle big files better. (Jani)
- Added array_chunk() function that splits an array into chunks of specified
  size. (Andrei)
- $HTTP_RAW_POST_DATA was not populated on a missing content-type even when
  always_populate_raw_post_data was on - fixed. (Rasmus)
- Added session_cache_expire() function. (patch from anuradha@gnu.org)
- Add array_fill() function. (Rasmus)
- Hide Authorization header from phpinfo() output in safe_mode. (Rasmus)
- Re-instated safe-mode realm mangling. (Rasmus)